# math_models

./: .gitignore  README.md
10th/: client.ipynb  main.cpp
10th/configs/: RK4.json
10th/datas/: dataV_hoin.csv  dataX_eyler.csv  dataX_hoin.csv
15th(Kapitsa)/: CMakeLists.txt  df.py  main.cpp
15th(Kapitsa)/datas/: data_omega.csv  data_phi.csv
1sem/15th(Kapitsa)/: client.ipynb  main.ipynb
1sem/2nd/: task3.py
1sem/3rd/: 2nd  2nd.cpp  4th.md  5th  5th.cpp  main
1sem/4-5th/: client.ipynb  main  main.ipynb
1sem/6th/: cpp_euler  cpp_euler.cpp  main  main.cpp  python_euler.py
1sem/7th/: CMakeLists.txt  equation.cpp  main.cpp  solving.hpp
1sem/8th/: client.ipynb
1sem/9th/: client.ipynb  visual.ipynb
1sem/SOLVER/: solver.cpp
1st/task1/: 1st
1st/task10/: 10th.cpp
2sem/2week/: CMakeLists.txt
2sem/2week/1task/: data.txt  data1.txt  main.cpp  main.ipynb
2sem/2week/1task/.cache/clangd/index/: main.cpp.6A7F65A61EDAC694.idx
2sem/2week/2task/: data.txt  main.cpp  main.ipynb
2sem/2week/2task/.cache/clangd/index/: main.cpp.2705F3C49150FA36.idx
3rd/: 1st.cpp  3rd  3rd.cpp  main.ipynb
4-5th/: client.ipynb  main.cpp  main.ipynb
4th/: client.ipynb  dataV_RK4.csv  dataV_eyler.csv  dataV_hoin.csv  dataX_RK4.csv  dataX_eyler.csv  dataX_hoin.csv  main  main.cpp  main.ipynb  mian  mian.cpp
6th/: client.ipynb  draft.cpp  draft2.cpp
7th/: equation.hpp  main.cpp  main.ipynb  solving.cpp  visual.ipynb
8th/: CMakeLists.txt  main.cpp  visual.ipynb
9th/: client.ipynb  main.cpp
SOLVER/: CMakeLists.txt  equations.hpp  main.cpp  solver.hpp
(+104 files in other folders)
